2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* update-mime-database.c: (process_freedesktop_node):
	process <acronym/> and <expanded-acronym/>.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add "GNUmakefile" pattern to
	"text/x-makefile". Fixes #4334.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add comment to "application/x-sc", by J.H.M.
	Dassen. Fixes #3146.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: register "application/x-mathematica" as
	alias for "application/mathematica". Fixes #4403.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add <acronym/> and <expanded-acronym/> tags.
	Use shorter text for many <comment/> tags.

2005-10-22  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add m4v as a possible extension for video
	MPEG4, and add video/x-m4v as an alias for video/mp4

2005-10-22  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add text/gedcom as an alias for
	application/x-gedcom

2005-05-31  Antonio Xu <antonio.xu@sun.com>

	Reviewed by: Bastien Nocera <hadess@hadess.net>
 
	* freedesktop.org.xml.in: add one more pattern "Return-path" for
	message/rfc822

2005-09-11  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml: add audio/mpegurl as an alias to
	audio/x-mpegurl

2005-08-26  Christopher Aillon  <caillon@redhat.com>

	* freedesktop.org.xml.in: text/css subclasses text/plain

2005-08-10  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: increase priority of the docbook magic
	for it to take precedence over suffixes

2005-08-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Make the application/mathematica comment
	translatable, patch from Christopher James Lahey <clahey@novell.com>
	and Luis Villa <luis.villa@gmail.com> for docbook support

2005-07-25  Bastien Nocera  <hadess@hadess.net>
