@@ -192,10 +192,17 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/vnd.corel-draw">
     <_comment>Corel Draw drawing</_comment>
-    <magic priority="50">
-      <match type="string" value="CDR vrsn" offset="8"/>
+    <magic priority="80">
+      <match type="string" value="CDRXvrsn" mask="0xffffff00ffffffff" offset="8"/>
     </magic>
     <glob pattern="*.cdr"/>
+    <alias type="application/cdr"/>
+    <alias type="application/coreldraw"/>
+    <alias type="application/x-cdr"/>
+    <alias type="application/x-coreldraw"/>
+    <alias type="image/cdr"/>
+    <alias type="image/x-cdr"/>
+    <alias type="zz-application/zz-winassoc-cdr"/>
   </mime-type>
   <mime-type type="application/vnd.hp-hpgl">
     <_comment>HPGL file</_comment>
